--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@iconify/vue": "^4.1.1",
     "@pinia/testing": "^0.1.3",
     "@rushstack/eslint-patch": "^1.3.3",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/vue": "^8.0.2",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.10",
