--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -6,6 +6,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
 
     "lib": [],
-    "types": ["node", "jsdom", "vitest/globals"]
-  }
+    "types": ["node", "jsdom", "vitest/globals", "@testing-library/jest-dom"]
+  },
+  "include": ["./vitest-setup.ts", "./src/**/*"]
 }
